[project]
name = "lintlify"
version = "0.1.0"
authors = [
    { name = "Alexandre Viau", email="alexandre.viau@flare.io>" }
]
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12.3",
    "ty>=0.0.15",
    "ruff>=0.14.3",
    "python-frontmatter>=1.1.0",
    "requests>=2.32",
    "pytest>=8.4.2",
    "types-requests>=2.32",
    "flareio>=2.1.0",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.ruff.lint]
extend-select = [
    "I",
    "C411",
    "C413",
    "C414",
    "C416",
    "C417",
    "C419",
]

[tool.ruff.lint.isort]
force-single-line = true
no-sections = true
lines-after-imports = 2
lines-between-types = 1
force-wrap-aliases = true
combine-as-imports = true
forced-separate = [
    "typing",
]
